# protobuf-c

./: CMakeLists.txt
cmake/: InstallSymlink.cmake.in
